fix first row wrapping when resize

--- a/src/app/features/notes/notes-list/note-list-item/note-list-item.component.scss
+++ b/src/app/features/notes/notes-list/note-list-item/note-list-item.component.scss
@@ -1,6 +1,6 @@
 :host {
   position: absolute;
-  transition: all 0.5s ease-out;
+  transition: all 0.1s ease-out;
 
   .mat-card {
     min-width: 150px;
