--- a/src/app/features/notes/notes-list/notes-list.component.scss
+++ b/src/app/features/notes/notes-list/notes-list.component.scss
@@ -24,7 +24,7 @@
 
   height: 100%;
   width: 100%;
-  display: flex;
+  display: block;
 
   .spot {
     position: absolute;
